sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:11: error: illegal start of simple expression
  }while(nbEch != 0)
  ^