sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(tab:Array[Int])  {
  var nbEch = 0
  var long = tab.length
  do 
  {
  	for(i<- 1 to long)  
    
    
    
  }while(nbEch != 0)
}